--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -18,8 +18,8 @@
     <meta name="description" content="Let randomness run your life">
 
     {% block stylesheets %}
-        <link rel="stylesheet" media="screen" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
-        <link rel="stylesheet" media="screen" href="{{ asset('bootstrap/css/bootstrap-theme.min.css') }}">
+        <link rel="stylesheet" media="screen" href="{{ asset('bower_components/bootstrap/dist/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" media="screen" href="{{ asset('bower_components/bootstrap/dist/css/bootstrap-theme.min.css') }}">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
     {% endblock %}
 
@@ -77,10 +77,10 @@
 </div>
 
 {% block javascripts %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="bower_components/jquery/jquery.min.js"><\/script>')</script>
 
-    <script src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
 {% endblock %}
 
 {% if env == 'production' %}
