Fix Reset & Yes/No choices making the viewport black

--- a/app/views/app.html.twig
+++ b/app/views/app.html.twig
@@ -62,9 +62,9 @@
                                             <span class="sr-only">Toggle Dropdown</span>
                                         </button>
                                         <ul class="dropdown-menu pull-right" role="menu">
-                                            <li><a href="#" ng-click="populate(['{{ 'app.btn.populate_yes'|trans }}',' {{ 'app.btn.populate_no'|trans }}'])">{{ 'app.btn.populate'|trans }}</a></li>
+                                            <li><a href="" ng-click="populate(['{{ 'app.btn.populate_yes'|trans }}',' {{ 'app.btn.populate_no'|trans }}'])">{{ 'app.btn.populate'|trans }}</a></li>
                                             <li class="divider"></li>
-                                            <li><a href="#" ng-click="reset()">{{ 'app.btn.reset'|trans }}</a></li>
+                                            <li><a href="" ng-click="reset()">{{ 'app.btn.reset'|trans }}</a></li>
                                         </ul>
                                     </div>
                                 </div>
