--- a/app/views/email.html.twig
+++ b/app/views/email.html.twig
@@ -14,4 +14,4 @@
 </ul>
 <p>{{ 'signature'|trans({'%link%': url('home')})|raw|nl2br }}</p>
 <hr>
-<font size="2">{{ 'blacklist'|trans({'%link%': url('blacklist_add', {message_id: message_id, email_id: email_id})})|raw }}</font>
+<font size="2">{{ 'blacklist'|trans({'%link%': url('blacklist_add', {message_id: message_id, email_id: email_id}), '%name%': "<a href=\"mailto:#{email}\">#{name}</a>"})|raw }}</font>
